package task2;

import task2.Line.Position;

public interface Linable {

    public void setRank(int rank);

    public int getRank();

    public void setPosition(Position position);

    public Position getPosition();
    
}
